# gleamanzeigen

./: README.md  README.org  config.toml  filepath-1.1.1.tar  flake.nix  gleam.toml  manifest.toml  test.html
.github/workflows/: flakehub-publish-rolling.yml
rparser/: Cargo.toml
rparser/src/: main.rs  parser.rs
rparser/src/proto/: message.proto
src/: config.gleam  flake.nix  gleamanzeigen.gleam  klaz.gleam  parser.gleam  webhook.gleam
